# barter-integration-rs

./: Cargo.toml  README.md
examples/: signed_get_request.rs  simple_websocket_integration.rs
src/: de.rs  error.rs  lib.rs  metric.rs  model.rs  util.rs
src/model/: mod.rs
src/model/instrument/: kind.rs  mod.rs
src/protocol/: http.rs  http_old.rs  mod.rs  websocket.rs
src/protocol/http/: mod.rs  rest.rs  signer.rs
src/protocol/http/private/: encoder.rs  mod.rs
src/protocol/http/public/: mod.rs
src/protocol/http/rest/: client.rs  mod.rs
src/public/: explore.rs  mod.rs  model.rs
src/public/binance/: futures.rs  mod.rs
src/socket/: error.rs  mod.rs
src/socket/protocol/: mod.rs  websocket.rs
