[package]
name = "barter-integration"
version = "0.4.0"
authors = ["keirbailey <keirinvestment@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/barter-integration/"
repository = "https://github.com/barter-rs/barter-integration-rs"
readme = "README.md"
description = "Low-level framework for composing flexible web integrations, especially with financial exchanges"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = "0.1.29"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_qs = "0.11.0"

# Error
thiserror = "1.0.32"

# Async
tokio = { version = "1.20.1", features = ["net", "sync", "macros", "rt-multi-thread"] }
futures = "0.3.21"
async-trait = "0.1.57"
pin-project = "1.0.11"

# Protocol
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.11.12", features = ["json"] }
url = "2.3.1"

# Cryptographic Signatures
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"

# Misc
chrono = "0.4.21"
bytes = "1.2.1"
